--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Battleship Game</title>
+  <title>Improved Battleship Game</title>
   <style>
     body {
       font-family: Arial, sans-serif;
@@ -20,15 +20,13 @@
     #game-container {
       display: flex;
       justify-content: center;
-      gap: 20px;
       margin-top: 20px;
     }
 
-    #player-grid,
-    #opponent-grid {
+    #grid {
       display: grid;
-      grid-template-columns: repeat(5, 50px);
-      grid-template-rows: repeat(5, 50px);
+      grid-template-columns: repeat(8, 50px);
+      grid-template-rows: repeat(8, 50px);
       gap: 2px;
     }
 
@@ -57,11 +55,11 @@
 
     #instruction {
       font-size: 1.2em;
-      margin-bottom: 10px;
+      margin-top: 20px;
     }
 
-    #next-phase {
-      margin-top: 20px;
+    #rotate-button {
+      margin-top: 10px;
       padding: 10px 20px;
       font-size: 1em;
     }
@@ -74,82 +72,117 @@
   </style>
 </head>
 <body>
-  <h1>Battleship Game</h1>
-  <p id="instruction">Player 1, set up your ships!</p>
+  <h1>Improved Battleship Game</h1>
+  <p id="instruction">Player 1, place your ship of size 3!</p>
   <div id="game-container">
-    <div id="player-grid"></div>
-    <div id="opponent-grid"></div>
+    <div id="grid"></div>
   </div>
-  <button id="next-phase" style="display: none;">Next Phase</button>
+  <button id="rotate-button">Rotate Ship</button>
   <p id="winner" style="display: none;"></p>
   <script>
-    const playerGrid = document.getElementById("player-grid");
-    const opponentGrid = document.getElementById("opponent-grid");
+    const grid = document.getElementById("grid");
     const instruction = document.getElementById("instruction");
-    const nextPhaseButton = document.getElementById("next-phase");
+    const rotateButton = document.getElementById("rotate-button");
     const winnerDisplay = document.getElementById("winner");
 
-    const gridSize = 5;
-    const shipCount = 3;
-
+    const gridSize = 8;
+    const ships = [
+      { size: 3, placed: false },
+      { size: 2, placed: false },
+      { size: 1, placed: false },
+    ];
+    let currentPlayer = 1;
+    let shipIndex = 0;
+    let orientation = "horizontal"; // 'horizontal' or 'vertical'
     let player1Ships = [];
     let player2Ships = [];
     let player1Hits = [];
     let player2Hits = [];
-
-    let currentPlayer = 1;
     let setupPhase = true;
 
-    // Create grids
-    function createGrid(gridElement, isOpponent) {
+    // Create the grid
+    function createGrid() {
       for (let i = 0; i < gridSize; i++) {
         for (let j = 0; j < gridSize; j++) {
           const cell = document.createElement("div");
           cell.classList.add("cell");
           cell.dataset.row = i;
           cell.dataset.col = j;
-          cell.addEventListener("click", () => handleCellClick(cell, isOpponent));
-          gridElement.appendChild(cell);
+          cell.addEventListener("click", () => handleCellClick(cell));
+          grid.appendChild(cell);
         }
       }
     }
 
     // Handle cell clicks
-    function handleCellClick(cell, isOpponent) {
+    function handleCellClick(cell) {
       if (setupPhase) {
-        handleSetup(cell);
-      } else if (!setupPhase && isOpponent && currentPlayer !== (isOpponent ? 1 : 2)) {
+        handleShipPlacement(cell);
+      } else {
         handleStrike(cell);
       }
     }
 
-    // Handle ship placement
-    function handleSetup(cell) {
-      const ships = currentPlayer === 1 ? player1Ships : player2Ships;
+    // Place ships
+    function handleShipPlacement(cell) {
+      const row = +cell.dataset.row;
+      const col = +cell.dataset.col;
+      const ship = ships[shipIndex];
+      const shipCells = [];
 
-      if (ships.length < shipCount && !cell.classList.contains("ship")) {
-        cell.classList.add("ship");
-        ships.push([+cell.dataset.row, +cell.dataset.col]);
+      // Determine if the ship can be placed
+      for (let i = 0; i < ship.size; i++) {
+        const targetRow = orientation === "horizontal" ? row : row + i;
+        const targetCol = orientation === "horizontal" ? col + i : col;
 
-        if (ships.length === shipCount) {
-          if (currentPlayer === 1) {
-            currentPlayer = 2;
-            instruction.textContent = "Player 2, set up your ships! (Player 1, look away!)";
-          } else {
-            setupPhase = false;
-            instruction.textContent = "All ships placed! Player 1, start striking!";
-            nextPhaseButton.style.display = "none";
-          }
+        if (
+          targetRow >= gridSize ||
+          targetCol >= gridSize ||
+          document.querySelector(`[data-row="${targetRow}"][data-col="${targetCol}"]`).classList.contains("ship")
+        ) {
+          alert("Invalid placement!");
+          return;
         }
+
+        shipCells.push([targetRow, targetCol]);
+      }
+
+      // Place the ship
+      shipCells.forEach(([r, c]) => {
+        const cell = document.querySelector(`[data-row="${r}"][data-col="${c}"]`);
+        cell.classList.add("ship");
+      });
+
+      // Save ship data
+      if (currentPlayer === 1) {
+        player1Ships.push(...shipCells);
+      } else {
+        player2Ships.push(...shipCells);
+      }
+
+      shipIndex++;
+      if (shipIndex === ships.length) {
+        currentPlayer = currentPlayer === 1 ? 2 : 1;
+        shipIndex = 0;
+
+        if (currentPlayer === 2) {
+          instruction.textContent = "Player 2, place your ship of size 3!";
+        } else {
+          setupPhase = false;
+          instruction.textContent = "All ships placed! Player 1, start striking!";
+          rotateButton.style.display = "none";
+        }
+      } else {
+        instruction.textContent = `Player ${currentPlayer}, place your ship of size ${ships[shipIndex].size}!`;
       }
     }
 
-    // Handle strikes
+    // Strike opponent's ships
     function handleStrike(cell) {
-      const opponentShips = currentPlayer === 1 ? player2Ships : player1Ships;
-      const hits = currentPlayer === 1 ? player1Hits : player2Hits;
       const row = +cell.dataset.row;
       const col = +cell.dataset.col;
+      const opponentShips = currentPlayer === 1 ? player2Ships : player1Ships;
+      const hits = currentPlayer === 1 ? player1Hits : player2Hits;
 
       if (!cell.classList.contains("hit") && !cell.classList.contains("miss")) {
         if (opponentShips.some(([r, c]) => r === row && c === col)) {
@@ -164,22 +197,26 @@
       }
     }
 
-    // Check win condition
+    // Check for win
     function checkWin() {
-      if (player1Hits.length === shipCount) {
+      if (player1Hits.length === player2Ships.length) {
         winnerDisplay.textContent = "Player 1 Wins!";
         winnerDisplay.style.display = "block";
         instruction.style.display = "none";
-      } else if (player2Hits.length === shipCount) {
+      } else if (player2Hits.length === player1Ships.length) {
         winnerDisplay.textContent = "Player 2 Wins!";
         winnerDisplay.style.display = "block";
         instruction.style.display = "none";
       }
     }
 
+    // Rotate ship
+    rotateButton.addEventListener("click", () => {
+      orientation = orientation === "horizontal" ? "vertical" : "horizontal";
+    });
+
     // Initialize game
-    createGrid(playerGrid, false);
-    createGrid(opponentGrid, true);
+    createGrid();
   </script>
 </body>
 </html>
